# PlunksnaEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Tests.cpp  main.cpp  plan.txt
AssetHandler/: Asset.h  AssetHandler.cpp  AssetHandler.h  Mesh.h  Texture.h
ECS/: ComponentStore.h  ComponentStore.tpp  Entity.h  Filter.h  PaginatedVector.tpp  Registry.h  Registry.tpp
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Log.h
VKRenderer/: Buffer.h  CMakeLists.txt  Camera.h  Context.h  DescriptorManager.cpp  DescriptorManager.h  DrawSorter.cpp  DrawSorter.h  FrameResource.h  PushConstant.h  RenderUtils.cpp  Renderer.cpp  Renderer.h  RendererD.cpp  RendererUtils.h  SwapChain.cpp  SwapChain.h
assetHandler/: Asset.h  AssetHandler.cpp  AssetHandler.h  AssetType.h  Assets.h  CMakeLists.txt  CullSphere.h  Mesh.h  ShaderModule.h  Texture.h
assethandler/: Asset.h  AssetHandler.cpp  AssetHandler.h  AssetType.h  Mesh.h  Texture.h
cmake/: Dependencies.cmake  find.cmake  imguiDep.cmake
ecs/: CMakeLists.txt  ComponentStore.cpp  ComponentStore.h  ComponentStore.tpp  Entity.h  Filter.h  Filter.tpp  PaginatedVector.cpp  PaginatedVector.h  PaginatedVector.tpp  Registry.cpp  Registry.h  Registry.tpp  SparseSet.h  SparseSet.tpp
engine/: CMakeLists.txt  Components.h  Engine.cpp  Engine.h  Exception.cpp  Exception.h  GameObject.cpp  GameObject.h  Keyboard.cpp  Keyboard.h  Log.h  Mouse.cpp  Mouse.h  PlunksnaEngine.cpp  PlunksnaEngine.h  PlunksnaException.cpp  PlunksnaException.h  PlunksnaLog.h  PlunksnaWindow.cpp  PlunksnaWindow.h  Random.h  Result.h  Window.cpp  Window.h
gui/: CMakeLists.txt  Gui.cpp  Gui.h
shaders/: fragShader.frag  fragShader.spv  vertShader.spv  vertShader.vert
tests/: CMakeLists.txt  TestIncludes.h  test_ECS.cpp  test_Random.cpp  test_run-b12d07c_include.cmake
utils/: Types.h
vkRenderer/: CMakeLists.txt  Camera.cpp  Camera.h  Context.h  DescriptorManager.cpp  DescriptorManager.h  DrawSorter.cpp  DrawSorter.h  FrameResource.h  Image.h  RenderUtils.cpp  Renderer.cpp  Renderer.h  RendererD.cpp  RendererUtils.h  ShaderObjects.h  SwapChain.cpp  SwapChain.h  Vertex.h
vkrenderer/: Camera.cpp  Camera.h  Context.h  DescriptorManager.cpp  DescriptorManager.h  FrameResource.h  Image.h  PushConstant.h  QueueFamilyIndices.h  RenderIncludes.cpp  RenderUtils.cpp  Renderer.cpp  Renderer.h  RendererD.cpp  RendererIncludes.h  RendererUtils.h  ShaderObjects.h  SwapChain.cpp  SwapChain.h  VKRenderer.cpp  VKRenderer.h  VKRendererD.cpp
